[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/images/slash.png" type="Texture" id=1]
[ext_resource path="res://scripts/slash.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 166.382, 24.4056 )

[node name="slash" type="Area2D"]
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -11.1118 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -4.36306e-05, -3.9685 )
scale = Vector2( 25.2872, 7.42897 )

[connection signal="area_entered" from="." to="." method="_on_slash_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_slash_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
